SUBDIRS = src bindings
ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = examples/init.sh examples/python_example.py\
             examples/experiments_nips2010/ll_experiment_worker.py\
             examples/experiments_nips2010/per_sample_predictive.py\
             examples/crp_sampling.py\
             examples/sample_from_model.py\
AM_CXXFLAGS = $(BOOST_CPPFLAGS)
